# snapcheck

./: README.md  pyproject.toml
snapcheck/: __init__.py  __main__.py  schema.py
snapcheck/static/: index.html
